--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="ma-1">
+<body class="">
   <app-root>SportsStore Will Go Here</app-root>
 </body>
 </html>
